Fixed Layout issues on Mobile view

--- a/responsive.css
+++ b/responsive.css
@@ -51,9 +51,15 @@
 }
 
 
-@media screen and (max-width:480px)
+@media screen and (max-width:580px)
 {
-    
+    .hero-sec .content{
+        margin-top: 50px;
+    }
+
+    .main-wrapper{
+        background-size: 800px ;
+    }
     
     .hero-sec .content .btn_grp{
         flex-wrap: wrap !important;
